syntax = "proto3";
package caerus.files.v1;

option go_package = "github.com/desmos-labs/caerus/routes/files";

service FilesService {
  // UploadFile allows to upload a file
  rpc UploadFile (stream FileChunk) returns (UploadFileResponse);

  // GetFile allows to get the contents of a file
  rpc GetFile(GetFileRequest) returns (stream FileChunk);
}

message FileChunk {
  string file_name = 1;
  bytes data = 2;
}

message UploadFileResponse {
  string file_name = 1;
}

message GetFileRequest {
  string file_name = 1;
}